--- a/sass/main.sass
+++ b/sass/main.sass
@@ -7,17 +7,8 @@
 	padding: 0 30px
 	margin: 0 auto
 
-	// +r(1200)
-	// 	max-width: 992px
-
-	// +r(992)
-	// 	max-width: 768px
-
-	// +r(767)
-	// 	max-width: 576px
-
-	// +r(576)
-	// 	max-width: 480px
+	+r(480)
+		padding: 0 5px
 
 .header
 	padding-top: 20px
@@ -50,7 +41,6 @@
 
 		&--description
 			text-align: center
-			font-weight: 600
 			margin-bottom: 15px
 
 		&--payment
@@ -126,9 +116,6 @@
 		height: 82px
 		background-color: $bglight
 		border: 1px solid $bgdark
-		display: flex
-		align-items: center
-		justify-content: center
 
 		a
 			color: $text
