--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,12 +3,34 @@
 // -----CONTAINER-----
 .container
 	width: 100%
-	max-width: 1800px
-	padding: 0 30px
+	max-width: 1296px
+	padding: 0 20px
 	margin: 0 auto
 
+	+r(1320)
+		max-width: 1136px
+
+	+r(1160)
+		max-width: 976px
+	
+	+r(996)
+		max-width: 816px
+
+	+r(840)
+		max-width: 610px
+
+	+r(670)
+		max-width: 568px
+
+	+r(576)
+		max-width: 404px
+
 	+r(480)
+		max-width: 324px
 		padding: 0 5px
+
+	+r(360)
+		max-width: 284px
 
 .header
 	padding-top: 20px
@@ -26,34 +48,19 @@
 		flex-direction: column
 		max-height: 220px
 		justify-content: space-between
+		width: 100%
 
-		+r(992)
-			max-height: 400px
+		// +r(992)
+		// 	max-height: 400px
 
-		+r(480)
-			max-height: 600px
+		// +r(480)
+		// 	max-height: 600px
 
 		&--time
 
 			a
 				color: $text
 				font-weight: 600
-
-		&--description
-			text-align: center
-			margin-bottom: 15px
-
-		&--payment
-			align-self: flex-start
-
-			+r(767)
-				align-self: center
-
-			img
-				filter: grayscale(100%)
-
-				&:hover
-					filter: none
 
 		&--info
 			align-self: flex-end
@@ -94,26 +101,27 @@
 				display: block
 
 			+r(480)
-				max-width: 200px
+				// max-width: 200px
 
 .table
-	padding-top: px
+	margin-bottom: 10px
 
 	&__container
 		display: grid
 		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr
 
-		+r(767)
+		+r(840)
 			grid-template-columns: 1fr 1fr 1fr 1fr 1fr
 
-		+r(576)
-			grid-template-columns: 1fr 1fr 1fr 1fr
+		+r(670)
+			grid-template-columns: 1fr 1fr 1fr 1fr	
 
-		+r(480)
+		+r(576)
 			grid-template-columns: 1fr 1fr
 
 	&__item
-		height: 82px
+		height: 80px
+		width: 160px
 		background-color: $bglight
 		border: 1px solid $bgdark
 
@@ -123,6 +131,38 @@
 			&:hover
 				cursor: pointer
 
+		+r(1320)
+			width: 140px
+			height: 70px
+
+		+r(1160)
+			width: 120px
+			height: 60px
+
+		+r(996)
+			width: 100px
+			height: 50px
+
+		+r(840)
+			width: 120px
+			height: 60px
+
+		+r(670)
+			width: 140px
+			height: 70px
+
+		+r(576)
+			width: 200px
+			height: 100px
+
+		+r(480)
+			width: 160px
+			height: 80px
+
+		+r(360)
+			width: 140px
+			height: 70px
+
 .gold
 	background-color: $accent
 	border-bottom: none
@@ -131,7 +171,7 @@
 	background-color: #ffffff
 	border: none
 
-	+r(767)
+	+r(840)
 		display: none
 
 .copyright
@@ -142,6 +182,14 @@
 
 	+r(1200)
 		font-size: 14px
+
+	+r(670)
+		grid-column-start: 1
+		grid-column-end: 5
+	
+	+r(576)
+		grid-column-start: 1
+		grid-column-end: 3
 
 .tooltip
 	position: relative
@@ -175,3 +223,21 @@
 .tooltip:hover .tooltiptext
 	visibility: visible
 	opacity: 1
+
+.footer
+
+	&__description
+		text-align: center
+		margin-bottom: 15px
+
+	&__payment
+		align-self: flex-start
+
+		+r(767)
+			align-self: center
+
+		img
+			filter: grayscale(100%)
+
+			&:hover
+				filter: none
