--- a/sass/main.sass
+++ b/sass/main.sass
@@ -175,6 +175,12 @@
 	+r(1200)
 		font-size: 14px
 
+	+r(996)
+		font-size: 12px
+
+	+r(840)
+		font-size: 14px
+
 	+r(670)
 		grid-column-start: 1
 		grid-column-end: 5
