--- a/sass/main.sass
+++ b/sass/main.sass
@@ -10,7 +10,7 @@
 		max-width: 648px
 
 	+r(768)
-		max-width: 568px
+		// max-width: 568px
 	
 	+r(640)
 		max-width: 324px
@@ -109,15 +109,7 @@
 
 			&:hover
 				cursor: pointer
-
-		+r(1280)
-			width: 160px
-			height: 80px
-
-		+r(768)
-			width: 140px
-			height: 70px
-
+				
 		+r(640)
 			width: 160px
 			height: 80px
